force-app/main/default/objects/OrderActivationRules__mdt/OrderActivationRules__mdt.object-meta.xml
<CustomObject>
    <label>Order Activation Rules</label>
    <pluralLabel>Order Activation Rules</pluralLabel>
</CustomObject>