force-app/main/default/objects/OrderActivationRules__mdt/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2B Shop</fullName>
            </value>
            <value>
                <fullName>B2B Salesforce</fullName>
            </value>
            <value>
                <fullName>Trade</fullName>
                <default>true</default>
                <label>Trade</label>
            </value>
            <value>
                <fullName>eCommerce B2C</fullName>
            </value>
            <value>
                <fullName>eCommerce B2B</fullName>
            </value>
            <value>
                <fullName>NetSuite: Manual</fullName>
            </value>
            <value>
                <fullName>Order Form</fullName>
            </value>
            <value>
                <fullName>Trade - Early Season Order</fullName>
            </value>
            <value>
                <fullName>Tender</fullName>
            </value>
            <value>
                <fullName>Depot</fullName>
            </value>
            <value>
                <fullName>Studiemeister</fullName>
            </value>
            <value>
                <fullName>B2B Salesforce Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>