force-app/main/default/objects/OrderActivationRules__mdt/listViews/Allview.listView-meta.xml
<ListView>
    <fullName>Allview</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>OperatingCompany__c</columns>
    <columns>Source__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All view</label>
    <language>en_US</language>
</ListView>